overseerr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  labels:
    app.kubernetes.io/name: overseerr
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overseerr
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - name: overseerr
          image: ghcr.io/sct/overseerr
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5055
              name: http
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
          readinessProbe:
            tcpSocket:
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 250m
              memory: 300Mi
          volumeMounts:
            - mountPath: /app/config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr-config
