overseerr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  labels:
    app.kubernetes.io/name: overseerr
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: overseerr
  type: ClusterIP
