overseerr/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
  labels:
    app.kubernetes.io/name: overseerr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: https-xmple-io
  hostnames:
    - overseerr.xmple.io
  rules:
    - backendRefs:
        - name: overseerr
          port: 80
          kind: Service
